--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>안냥</h1>
+    <img src="img01.jpg" alt="">
 </body>
 </html>
